# posti

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
src/: CMakeLists.txt
src/core/: CMakeLists.txt  builtins.cpp  builtins.hpp  graphicsstate.hpp  interpreter.cpp  interpreter.hpp  object.hpp  parser.cpp  parser.hpp  processor.cpp  processor.hpp  renderer.hpp  util.hpp
src/core/objects/: integer.hpp  name.hpp  operand.hpp  real.hpp  string.hpp
src/view/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  vm.cpp
test/files/: arithmetic.ps  path.ps
test/view/: CMakeLists.txt
